0.15

2019-01-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* Clean up the internal code that created scrollable peepholes
	(used by input fields, combo-boxes, the item layout manager, and
	the pane layout manager).

	Add a public API for the underlying peephole layout manager.

2018-12-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* ""_theme_font literals may now include font modifiers like
	""_font. Implement + and += operator overloads on x::w::font
	that modify an existing font.

0.14
	* Added search callback to the input field.

0.13

2018-12-18  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement the border layout manager.

2018-12-14  Sam Varshavchik  <mrsam@courier-mta.com>

	* booklayoutmanager: clicking on left/right scroll buttons
	make sure the new page's tab is visible.

2018-12-09  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement synchronization of window repainting.

	* Implement WM_HINTS. Specify that we handle input processing.
	Option to set urgent hint for dialog windows. Set alert and stop
	dialogs to urgent, by default.

0.12

2018-12-03  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create the toolbox layout manager.

	* Images: image filenames without a path component search the
	only theme directory.

2018-12-02  Sam Varshavchik  <mrsam@courier-mta.com>

	* Remove the need to specify window labels when preserving
	window positions. Automatically use the same label when the window
	was created.

2018-11-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* main_window.C: overhaul parameters to methods that create dialogs.
	Use create_dialog_args and standard_dialog_args for the dialog id,
	modal flag, and the optional layout manager.

2018-11-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* dialog_handler.C: Add set_dialog_position().

2018-11-26  Sam Varshavchik  <mrsam@courier-mta.com>

	* generic_window.C: Add set_window_type(), on_stabilized().

2018-11-25  Sam Varshavchik  <mrsam@courier-mta.com>
