@@ -1,3 +1,9 @@
+2019-01-15  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* includes/x/w/impl/focus/focusable_element.H (process_button_event):
+	Right mouse button click moves keyboard focus just like the left
+	mouse button click.
+
 0.15
 
 2019-01-06  Sam Varshavchik  <mrsam@courier-mta.com>
